move articles out of javascript to seperate html files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1>Digi2Nomad</h1>
+                <h1>Mike Z. Luo</h1>
                 <p class="tagline">Fleeting thoughts and notes</p>
             </div>
             <nav class="article-index">
