--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digi2Nomad - Fleeting thoughts and notes</title>
+    <title>Mike Z. Luo - Fleeting thoughts and notes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1>Mike Z. Luo</h1>
+                <h1><a href="https://github.com/digi2nomad">Mike Z. Luo</a></h1>
                 <p class="tagline">Fleeting thoughts and notes</p>
             </div>
             <nav class="article-index">
